  (Jira APPSERVER-208)
- New multi-threaded connection code fixes various timeout issues
  (Jira APPSERVER-122, Jira APPSERVER-166 and Jira APPSERVER-167)
- Always use correct classloader inside applications (Jira APPSERVER-200)
- Tomcat cannot undeploy red5 application (Jira APPSERVER-204)
- "ByteArray" objects used old data after calling "compress" or "uncompress"
  (Jira APPSERVER-211)


Red5 0.6.3  (2007-09-17)
------------------------
New Features:
- Remoting requests from "mx:RemoteObject" supported (Jira APPSERVER-144)
- RTMPT working with Tomcat
- Added thread that writes modified persistent objects periodically.
  This reduces server load if multiple attributes of one object,
  or the same object is modified frequently.
- Location of "webapps" folder can be configured in bean "jetty6.server"
  inside "conf/red5.xml" (Jira APPSERVER-152)
- "IStreamFilenameGenerator" can specify if it returns absolute or relative
  paths
- Applications can be unloaded and loaded without restarting Red5
- "mx.collections.ArrayCollection" objects supported by AMF3 codec
- Object attributes are converted if necessary in AMF0/AMF3 codecs
- "mx.utils.ObjectProxy" objects supported by AMF3 codec (Jira APPSERVER-173)
- "IConnection" objects for Remoting properly store attributes accross
  multiple requests by using sessions
- Remoting headers are accessible through "IConnection.getConnectParams"
- "ByteArray" objects supported (Jira APPSERVER-189)
- "NetStream.send" messages are properly passed through from Flex clients
  (Jira APPSERVER-185)
- Class fields that should not be serialized when sending objects to clients
  can be annotated with "@DontSerialize" (in "org.red5.annotations")
- Public methods can be protected from being called through RTMP, RTMPT or
  Remoting by using "@DeclarePrivate" and "@DeclareProtected".
- Support for XML objects added to AMF3 codec (Jira APPSERVER-196)

Bugfixes:
- Validate RTMP handshake received from client (Jira APPSERVER-159)